--- a/package.json
+++ b/package.json
@@ -6,20 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "pnpm supabase gen types typescript --project-id='xpigcrhviapldbjzyubm' --schema public > db_types.d.ts "
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@supabase/auth-helpers-nextjs": "^0.6.0",
+    "@supabase/supabase-js": "^2.20.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "cva": "npm:class-variance-authority@^0.5.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "lodash": "^4.17.21",
     "next": "13.3.0",
+    "pluralize": "^8.0.0",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lite-youtube-embed": "^2.3.52",
+    "sharp": "^0.32.0",
+    "supabase": "^1.41.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@catppuccin/tailwindcss": "^0.1.1",
+    "@types/lodash": "^4.14.194",
+    "@types/pluralize": "^0.0.29",
+    "@types/youtube": "^0.0.47",
+    "server-only": "^0.0.1"
   }
 }
