--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
     "cva": "npm:class-variance-authority@^0.5.2",
     "eslint": "8.38.0",
