--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen": "pnpm supabase gen types typescript --project-id='xpigcrhviapldbjzyubm' --schema public > db_types.d.ts "
+    "gen": "pnpm supabase gen types typescript --project-id='xpigcrhviapldbjzyubm' --schema public > db_types.d.ts ",
+        "prepare": "husky install"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -41,6 +42,8 @@
     "@types/lodash": "^4.14.194",
     "@types/pluralize": "^0.0.29",
     "@types/youtube": "^0.0.47",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+        "pretty-quick": "^3.1.3",
+        "husky": "^8.0.3"
   }
 }
