--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "gen": "pnpm supabase gen types typescript --project-id='xpigcrhviapldbjzyubm' --schema public > db_types.d.ts ",
-        "prepare": "husky install"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -42,8 +42,9 @@
     "@types/lodash": "^4.14.194",
     "@types/pluralize": "^0.0.29",
     "@types/youtube": "^0.0.47",
-    "server-only": "^0.0.1",
-        "pretty-quick": "^3.1.3",
-        "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "prettier": "^2.8.7",
+    "pretty-quick": "^3.1.3",
+    "server-only": "^0.0.1"
   }
 }
