--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sharp": "^0.32.0",
     "supabase": "^1.41.1",
     "tailwindcss": "3.3.1",
+    "tiny-cookie": "^2.4.1",
     "typescript": "5.0.4",
     "zod": "^3.21.4",
     "zod-formik-adapter": "^1.2.0"
