--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
-    "next": "13.3.0",
+    "next": "13.4.4-canary.6",
     "pluralize": "^8.0.0",
     "postcss": "8.4.22",
     "react": "18.2.0",
