--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen": "pnpm supabase gen types typescript --project-id='xpigcrhviapldbjzyubm' --schema public > db_types.d.ts ",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "generate": "drizzle-kit generate:pg"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -22,6 +22,7 @@
     "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
     "cva": "npm:class-variance-authority@^0.5.2",
+    "drizzle-orm": "^0.26.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
@@ -29,6 +30,7 @@
     "next": "13.4.4-canary.6",
     "pluralize": "^8.0.0",
     "postcss": "8.4.22",
+    "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lite-youtube-embed": "^2.3.52",
@@ -38,16 +40,19 @@
     "tiny-cookie": "^2.4.1",
     "typescript": "5.0.4",
     "zod": "^3.21.4",
-    "zod-formik-adapter": "^1.2.0"
+    "zod-formik-adapter": "^1.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.1",
     "@types/lodash": "^4.14.194",
     "@types/pluralize": "^0.0.29",
     "@types/youtube": "^0.0.47",
+    "drizzle-kit": "^0.18.0",
     "husky": "^8.0.3",
     "prettier": "^2.8.7",
     "pretty-quick": "^3.1.3",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "dotenv": "^16.0.3"
   }
 }
