--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tiny-cookie": "^2.4.1",
     "typescript": "5.0.4",
     "zod": "^3.21.4",
+    "zod-form-data": "^2.0.1",
     "zod-formik-adapter": "^1.2.0",
     "zustand": "^4.3.8"
   },
@@ -48,11 +49,11 @@
     "@types/lodash": "^4.14.194",
     "@types/pluralize": "^0.0.29",
     "@types/youtube": "^0.0.47",
+    "dotenv": "^16.0.3",
     "drizzle-kit": "^0.18.0",
     "husky": "^8.0.3",
     "prettier": "^2.8.7",
     "pretty-quick": "^3.1.3",
-    "server-only": "^0.0.1",
-    "dotenv": "^16.0.3"
+    "server-only": "^0.0.1"
   }
 }
