--- a/package.json
+++ b/package.json
@@ -16,29 +16,29 @@
     "@supabase/auth-helpers-nextjs": "^0.6.0",
     "@supabase/supabase-js": "^2.20.0",
     "@t3-oss/env-nextjs": "^0.4.0",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.37",
-    "@types/react-dom": "18.0.11",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.8",
+    "@types/react-dom": "18.2.4",
     "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
     "cva": "npm:class-variance-authority@^0.5.2",
     "drizzle-orm": "^0.26.0",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
+    "eslint": "8.42.0",
+    "eslint-config-next": "13.4.4",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
-    "next": "13.4.4-canary.6",
+    "next": "13.4.4",
     "pluralize": "^8.0.0",
-    "postcss": "8.4.22",
+    "postcss": "8.4.24",
     "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lite-youtube-embed": "^2.3.52",
     "sharp": "^0.32.0",
     "supabase": "^1.41.1",
-    "tailwindcss": "3.3.1",
+    "tailwindcss": "3.3.2",
     "tiny-cookie": "^2.4.1",
-    "typescript": "5.0.4",
+    "typescript": "5.1.3",
     "zod": "^3.21.4",
     "zod-form-data": "^2.0.1",
     "zod-formik-adapter": "^1.2.0",
