--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "3.3.2",
     "tiny-cookie": "^2.4.1",
     "typescript": "5.1.3",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.21.4",
     "zod-form-data": "^2.0.1",
     "zod-formik-adapter": "^1.2.0",
