--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
-    "@supabase/auth-helpers-nextjs": "^0.6.0",
-    "@supabase/supabase-js": "^2.20.0",
     "@t3-oss/env-nextjs": "^0.4.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
@@ -26,7 +24,8 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "lodash": "^4.17.21",
-    "next": "13.4.4",
+    "next": "^13.4.5-canary.4",
+    "next-auth": "^4.22.1",
     "pluralize": "^8.0.0",
     "postcss": "8.4.24",
     "postgres": "^3.3.5",
@@ -34,7 +33,6 @@
     "react-dom": "18.2.0",
     "react-lite-youtube-embed": "^2.3.52",
     "sharp": "^0.32.0",
-    "supabase": "^1.41.1",
     "tailwindcss": "3.3.2",
     "tiny-cookie": "^2.4.1",
     "typescript": "5.1.3",
